--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,7 +15,6 @@ layout: default
       {%- for post in site.posts -%}
       <li>
         {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-        <span class="post-meta">{{ post.date | date: date_format }}</span>
         <h3>
           <a class="post-link" href="{{ post.url | relative_url }}">
             {{ post.title | escape }}
@@ -24,6 +23,7 @@ layout: default
         {%- if site.show_excerpts -%}
           {{ post.excerpt }}
         {%- endif -%}
+        <div class="post-meta">{{ post.date | date: date_format }}</div>
       </li>
       {%- endfor -%}
     </ul>
