--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -2,15 +2,16 @@
 
 // Define defaults for each variable.
 
-$base-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
-$base-font-size:   16px !default;
+//$base-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
+$base-font-family: medium-content-serif-font,Georgia,Cambria,"Times New Roman",Times,serif;
+$base-font-size:   21px !default;
 $base-font-weight: 400 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
 $base-line-height: 1.5 !default;
 
 $spacing-unit:     30px !default;
 
-$text-color:       #111 !default;
+$text-color:       rgba(0, 0, 0, 0.8) !default;
 $background-color: #fdfdfd !default;
 $brand-color:      #2a7ae2 !default;
 
