--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -176,7 +176,7 @@
  * Page content
  */
 .page-content {
-  padding: $spacing-unit 0;
+  padding: 0 0 $spacing-unit 0;
   flex: 1;
 }
 
@@ -268,26 +268,39 @@
   margin-bottom: $spacing-unit;
 
   h2 {
-    @include relative-font-size(2);
+    @include relative-font-size(1.5);
 
     @include media-query($on-laptop) {
-      @include relative-font-size(1.75);
+      @include relative-font-size(1.3);
     }
   }
 
   h3 {
-    @include relative-font-size(1.625);
+    @include relative-font-size(1.25);
 
     @include media-query($on-laptop) {
-      @include relative-font-size(1.375);
+      @include relative-font-size(1.1);
     }
   }
 
   h4 {
-    @include relative-font-size(1.25);
+    @include relative-font-size(1.2);
 
     @include media-query($on-laptop) {
-      @include relative-font-size(1.125);
+      @include relative-font-size(1.08);
     }
+  }
+}
+
+.footnote {
+  @include relative-font-size(0.75);
+  margin-top: 0;
+  margin-bottom: $spacing-unit;
+  text-align: center;
+  color: $grey-color;
+
+  a {
+    color: $grey-color;
+    text-decoration: underline;
   }
 }
