--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -11,7 +11,7 @@
 }
 
 .site-title {
-  @include relative-font-size(1.625);
+  @include relative-font-size(1.5);
   font-weight: 300;
   line-height: $base-line-height * $base-font-size * 2.25;
   letter-spacing: -1px;
@@ -22,6 +22,14 @@
   &:visited {
     color: $grey-color-dark;
   }
+}
+
+.site-logo {
+  float: left;
+  width: 60px;
+  height: 60px;
+  margin: 8px 8px 4px 0px;
+  vertical-align: middle;
 }
 
 .site-nav {
