--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,7 @@ layout: default
   <header class="post-header">
     {%- if page.cover_image -%}
       <div class="post-cover" style="background-image: url({{ page.cover_image }})">
+        <img hidden itemprop="image" src="{{ page.cover_image }}" />
         <h1 class="post-cover-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
       </div>
     {%- else -%}
@@ -15,9 +16,8 @@ layout: default
         {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
         {{ page.date | date: date_format }}
       </time>
-      {%- if page.author -%}
-        • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author }}</span></span>
-      {%- endif -%}</p>
+      <span hidden itemprop="author" itemscope itemtype="http://schema.org/Person">
+        <span hidden itemprop="name">Roman "Megus" Petrov</span></span>
   </header>
 
   <div class="post-content e-content" itemprop="articleBody">
