--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,6 +10,9 @@ layout: default
       </div>
     {%- else -%}
       <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
+      <span hidden itemscope itemtype="http://schema.org/Person" itemprop="author">
+        <span hidden itemprop="name">Roman "Megus" Petrov</span>
+      </span>
     {%- endif -%}
     <p class="post-meta">
       <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
