--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -9,20 +9,17 @@ layout: default
 
   {{ content }}
 
-
   {%- if site.posts.size > 0 -%}
-    <ul class="post-list">
-
-      {%- for project in site.projects -%}
-      <li>
-        <h3>
-          <a class="post-link" href="{{ project.url | relative_url }}">
-            {{ project.title | escape }}
-          </a>
-        </h3>
-      </li>
+    <div class="portfolio">
+      {%- assign ordered_projects = site.projects | sort:"order" -%}
+      {%- for project in ordered_projects -%}
+      <div class="portfolio-project">
+          <img src="{{ project.image }}" />
+          <h3><a href="{{ project.url | relative_url }}">{{ project.title | escape }}</a></h3>
+          <p>{{ project.description | escape }}</p>
+        </div>
       {%- endfor -%}
-    </ul>
+    </div>
 
     <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
   {%- endif -%}
