--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -153,14 +153,13 @@ blockquote {
  */
 pre,
 code {
-  @include relative-font-size(0.9375);
-  border: 1px solid $grey-color-light;
-  border-radius: 3px;
+  //border: 1px solid $grey;
+  border-radius: 6px;
   background-color: #eef;
 }
 
 code {
-  padding: 1px 5px;
+  padding: 2px 6px;
 }
 
 pre {
@@ -168,7 +167,7 @@ pre {
   overflow-x: auto;
 
   > code {
-    border: 0;
+    @include relative-font-size(0.75);
     padding-right: 0;
     padding-left: 0;
   }
