--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,8 +3,16 @@
 
   <div class="wrapper">
     <div class="footer-col-wrapper">
-      © 2018−2019 Roman "Megus" Petrov.<br />
-      <a class="u-email" href="mailto:megus.sugem@gmail.com">megus.sugem@gmail.com</a>
+      <div class="footer-col">
+        © 2018−2019 Roman “Megus” Petrov.<br />
+        <a class="u-email" href="mailto:megus.sugem@gmail.com">megus.sugem@gmail.com</a>
+      </div>
+      <div class="footer-col">
+        <a href="https://twitter.com/sugem"><svg viewbox="0 0 16 16" class="social-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#twitter' | relative_url }}"></use></svg></a>
+        <a href="https://www.facebook.com/sugem"><svg viewbox="0 0 16 16" class="social-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#facebook' | relative_url }}"></use></svg></a>
+        <a href="https://github.com/Megus"><svg viewbox="0 0 16 16" class="social-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#github' | relative_url }}"></use></svg></a>
+        <a href="https://www.youtube.com/user/megussugem"><svg viewbox="0 0 16 16" class="social-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#youtube' | relative_url }}"></use></svg></a>    
+      </div>
     </div>
   </div>
 
