--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,8 +5,10 @@ layout: default
   <header class="post-header">
     {%- if page.image -%}
       <div class="post-cover" style="background-image: url({{ page.image }})">
-        <img hidden itemprop="image" src="{{ page.image }}" />
-        <h1 class="post-cover-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
+        <div class="gradient">
+          <img hidden itemprop="image" src="{{ page.image }}" />
+          <h1 class="post-cover-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
+        </div>
       </div>
     {%- else -%}
       <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
