Cleaned up comments from _config.yml Added Twitter and Facebook share buttons to posts Polished the PICO-8 article a bit Killed Disqus comments, I don't need them because nobody's gonna use them anyway.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
   <div class="wrapper">
     <div class="footer-col-wrapper">
       <div class="footer-col">
-        © 2018−2019 Roman “Megus” Petrov.<br />
+        © Roman “Megus” Petrov.<br />
         <a class="u-email" href="mailto:megus.sugem@gmail.com">megus.sugem@gmail.com</a>
       </div>
       <div class="footer-col">
