--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,9 @@
 ---
 layout: default
 ---
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.3&appId=194003690636360&autoLogAppEvents=1"></script>
+
 <article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
   <header class="post-header">
     {%- if page.image -%}
@@ -28,9 +31,18 @@ layout: default
     {{ content }}
   </div>
 
-  {%- if site.disqus.shortname -%}
-    {%- include disqus_comments.html -%}
-  {%- endif -%}
-
   <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
+
 </article>
+
+<div class="social-buttons">
+  <a class="twitter-share-button" data-size="large"
+    href="https://twitter.com/intent/tweet?text={{ page.title | uri_escape }}&via={{ site.twitter_username }}">
+    Tweet
+  </a>
+  <div class="fb-share-button" style="top: -7px;"
+    data-href="{{ page.url | absolute_url }}"
+    data-layout="button" data-size="large">
+    <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a>
+  </div>
+</div>
