--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -163,7 +163,7 @@
   list-style: none;
 
   > li {
-    margin-bottom: $spacing-unit;
+    margin-bottom: $spacing-unit * 2;
   }
 }
 
@@ -301,6 +301,11 @@
     color: $grey-color;
     text-decoration: underline;
   }
+}
+
+.social-buttons {
+  margin-top: $spacing-unit * 2;
+  text-align: center;
 }
 
 /**
