--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,11 +1,11 @@
 <head>
   {%- if jekyll.environment == 'production' -%}
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-104711057-2"></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
 	<script>
   	window.dataLayer = window.dataLayer || [];
   	function gtag(){dataLayer.push(arguments);}
   	gtag('js', new Date());
-  	gtag('config', 'UA-104711057-2');
+  	gtag('config', '{{ site.google_analytics }}');
 	</script>
   {%- endif -%}
   <meta charset="utf-8">
