--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="{{ "/assets/favicon-96x96.png" | relative_url }}">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:600|PT+Serif|Source+Code+Pro&display=swap" rel="stylesheet">
   {%- seo -%}
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
+  {%- if page.css -%}
+  <link rel="stylesheet" href="{{ page.css | relative_url }}">
+  {%- endif -%}
   {%- feed_meta -%}
 </head>
