--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -2,8 +2,9 @@
 
 // Define defaults for each variable.
 
-//$base-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
-$base-font-family: medium-content-serif-font,Georgia,Cambria,"Times New Roman",Times,serif;
+$base-font-family: 'PT Serif', serif;
+$header-font-family: 'Open Sans', sans-serif;
+$code-font-family: 'Source Code Pro', monospace;
 $base-font-size:   18px !default;
 $base-font-weight: 400 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
