--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -96,9 +96,10 @@ li {
  * Headings
  */
 h1, h2, h3, h4, h5, h6 {
+  font-family: $header-font-family;
   margin-top: $spacing-unit;
   line-height: 1.2;
-  font-weight: $base-font-weight;
+  font-weight: 600;
 }
 
 
@@ -154,14 +155,13 @@ blockquote {
  */
 pre,
 code {
-  //border: 1px solid $grey;
   border-radius: 6px;
-  background-color: #eef;
+  font-family: $code-font-family;
 }
 
-code {
+/*code {
   padding: 2px 6px;
-}
+}*/
 
 pre {
   padding: 8px 12px;
