--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,8 +3,8 @@
   <div class="wrapper">
     {%- assign default_paths = site.pages | map: "path" -%}
     {%- assign page_paths = site.header_pages | default: default_paths -%}
-    <img class="site-logo" src="/assets/megus.png" />
-    <a class="site-title" rel="author" href="{{ "/" | relative_url }}">Megus</a>
+    <a href="{{ "/" | relative_url }}"><img class="site-logo" src="/assets/megus.png" />
+    <span class="site-title" rel="author">Megus</span></a>
 
     {%- if page_paths -%}
       <nav class="site-nav">
