--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -337,6 +337,12 @@
   }
 }
 
+@include media-query($on-palm) {
+  .portfolio-project {
+    width: 100%;
+  }
+}
+
 .portfolio-project-cover {
   width: 100%;
   padding-bottom: 75%;
@@ -361,9 +367,26 @@
 }
 
 
+
+/**
+ * Music page
+ */
+
+ .music-albums {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: space-between;
+ }
+
+ .music-album {
+  width: -webkit-calc(50% - (#{$spacing-unit / 2}));
+  width:         calc(50% - (#{$spacing-unit / 2}));
+}
+
 @include media-query($on-palm) {
-  .portfolio-project {
+  .music-album {
     width: 100%;
-    padding-bottom: $spacing-unit;
   }
 }
