--- a/assets/main.css
+++ b/assets/main.css
@@ -11,7 +11,7 @@ dl, dd, ol, ul, figure {
  * Basic styling
  */
 body {
-  font: 400 18px/1.5 medium-content-serif-font, Georgia, Cambria, "Times New Roman", Times, serif;
+  font: 400 18px/1.5 "PT Serif", serif;
   color: rgba(0, 0, 0, 0.8);
   background-color: #fdfdfd;
   -webkit-text-size-adjust: 100%;
@@ -72,9 +72,10 @@ li > ol {
  * Headings
  */
 h1, h2, h3, h4, h5, h6 {
+  font-family: "Open Sans", sans-serif;
   margin-top: 30px;
   line-height: 1.2;
-  font-weight: 400; }
+  font-weight: 600; }
 
 /**
  * Links
@@ -113,11 +114,11 @@ blockquote {
 pre,
 code {
   border-radius: 6px;
-  background-color: #eef; }
+  font-family: "Source Code Pro", monospace; }
 
-code {
-  padding: 2px 6px; }
-
+/*code {
+  padding: 2px 6px;
+}*/
 pre {
   padding: 8px 12px;
   overflow-x: auto; }
@@ -356,12 +357,12 @@ hr::before {
   margin-bottom: 30px; }
 
 .post-title {
-  font-size: 47.25px;
+  font-size: 45px;
   letter-spacing: -1px;
   line-height: 1; }
   @media screen and (max-width: 800px) {
     .post-title {
-      font-size: 40.5px; } }
+      font-size: 36px; } }
 
 .post-cover {
   width: 100vw;
@@ -466,6 +467,9 @@ hr::before {
   .portfolio-project h3 {
     margin-top: 15px; }
 
+@media screen and (max-width: 600px) {
+  .portfolio-project {
+    width: 100%; } }
 .portfolio-project-cover {
   width: 100%;
   padding-bottom: 75%;
@@ -486,147 +490,109 @@ hr::before {
     .portfolio-project-title {
       font-size: 22.5px; } }
 
+/**
+ * Music page
+ */
+.music-albums {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: space-between; }
+
+.music-album {
+  width: -webkit-calc(50% - (15px));
+  width: calc(50% - (15px)); }
+
 @media screen and (max-width: 600px) {
-  .portfolio-project {
-    width: 100%;
-    padding-bottom: 30px; } }
+  .music-album {
+    width: 100%; } }
 /**
  * Syntax highlighting styles
  */
 .highlight {
   background: #fff; }
   .highlighter-rouge .highlight {
-    background: #eef; }
-  .highlight .c {
-    color: #998;
-    font-style: italic; }
-  .highlight .err {
-    color: #a61717;
-    background-color: #e3d2d2; }
-  .highlight .k {
-    font-weight: bold; }
-  .highlight .o {
-    font-weight: bold; }
-  .highlight .cm {
-    color: #998;
-    font-style: italic; }
-  .highlight .cp {
-    color: #999;
-    font-weight: bold; }
-  .highlight .c1 {
-    color: #998;
-    font-style: italic; }
-  .highlight .cs {
-    color: #999;
-    font-weight: bold;
-    font-style: italic; }
-  .highlight .gd {
-    color: #000;
-    background-color: #fdd; }
-  .highlight .gd .x {
-    color: #000;
-    background-color: #faa; }
-  .highlight .ge {
-    font-style: italic; }
-  .highlight .gr {
-    color: #a00; }
-  .highlight .gh {
-    color: #999; }
-  .highlight .gi {
-    color: #000;
-    background-color: #dfd; }
-  .highlight .gi .x {
-    color: #000;
-    background-color: #afa; }
-  .highlight .go {
-    color: #888; }
-  .highlight .gp {
-    color: #555; }
-  .highlight .gs {
-    font-weight: bold; }
-  .highlight .gu {
-    color: #aaa; }
-  .highlight .gt {
-    color: #a00; }
-  .highlight .kc {
-    font-weight: bold; }
-  .highlight .kd {
-    font-weight: bold; }
-  .highlight .kp {
-    font-weight: bold; }
-  .highlight .kr {
-    font-weight: bold; }
-  .highlight .kt {
-    color: #458;
-    font-weight: bold; }
-  .highlight .m {
-    color: #099; }
-  .highlight .s {
-    color: #d14; }
-  .highlight .na {
-    color: #008080; }
-  .highlight .nb {
-    color: #0086B3; }
-  .highlight .nc {
-    color: #458;
-    font-weight: bold; }
-  .highlight .no {
-    color: #008080; }
-  .highlight .ni {
-    color: #800080; }
-  .highlight .ne {
-    color: #900;
-    font-weight: bold; }
-  .highlight .nf {
-    color: #900;
-    font-weight: bold; }
-  .highlight .nn {
-    color: #555; }
-  .highlight .nt {
-    color: #000080; }
-  .highlight .nv {
-    color: #008080; }
-  .highlight .ow {
-    font-weight: bold; }
-  .highlight .w {
-    color: #bbb; }
-  .highlight .mf {
-    color: #099; }
-  .highlight .mh {
-    color: #099; }
-  .highlight .mi {
-    color: #099; }
-  .highlight .mo {
-    color: #099; }
-  .highlight .sb {
-    color: #d14; }
-  .highlight .sc {
-    color: #d14; }
-  .highlight .sd {
-    color: #d14; }
-  .highlight .s2 {
-    color: #d14; }
-  .highlight .se {
-    color: #d14; }
-  .highlight .sh {
-    color: #d14; }
-  .highlight .si {
-    color: #d14; }
-  .highlight .sx {
-    color: #d14; }
-  .highlight .sr {
-    color: #009926; }
-  .highlight .s1 {
-    color: #d14; }
-  .highlight .ss {
-    color: #990073; }
-  .highlight .bp {
-    color: #999; }
-  .highlight .vc {
-    color: #008080; }
-  .highlight .vg {
-    color: #008080; }
-  .highlight .vi {
-    color: #008080; }
-  .highlight .il {
-    color: #099; }
+    border-radius: 16px; }
+
+.highlight table td {
+  padding: 5px; }
+
+.highlight table pre {
+  margin: 0; }
+
+.highlight, .highlight .w {
+  color: #f8f8f2;
+  background-color: #272822; }
+
+.highlight .err {
+  color: #272822;
+  background-color: #f92672; }
+
+.highlight .c, .highlight .cd, .highlight .cm, .highlight .c1, .highlight .cs {
+  color: #75715e; }
+
+.highlight .cp {
+  color: #f4bf75; }
+
+.highlight .nt {
+  color: #f4bf75; }
+
+.highlight .o, .highlight .ow {
+  color: #f8f8f2; }
+
+.highlight .p, .highlight .pi {
+  color: #f8f8f2; }
+
+.highlight .gi {
+  color: #a6e22e; }
+
+.highlight .gd {
+  color: #f92672; }
+
+.highlight .gh {
+  color: #66d9ef;
+  background-color: #272822;
+  font-weight: bold; }
+
+.highlight .k, .highlight .kn, .highlight .kp, .highlight .kr, .highlight .kv {
+  color: #ae81ff; }
+
+.highlight .kc {
+  color: #fd971f; }
+
+.highlight .kt {
+  color: #fd971f; }
+
+.highlight .kd {
+  color: #fd971f; }
+
+.highlight .s, .highlight .sb, .highlight .sc, .highlight .sd, .highlight .s2, .highlight .sh, .highlight .sx, .highlight .s1 {
+  color: #a6e22e; }
+
+.highlight .sr {
+  color: #a1efe4; }
+
+.highlight .si {
+  color: #cc6633; }
+
+.highlight .se {
+  color: #cc6633; }
+
+.highlight .nn {
+  color: #f4bf75; }
+
+.highlight .nc {
+  color: #f4bf75; }
+
+.highlight .no {
+  color: #f4bf75; }
+
+.highlight .na {
+  color: #66d9ef; }
+
+.highlight .m, .highlight .mf, .highlight .mh, .highlight .mi, .highlight .il, .highlight .mo, .highlight .mb, .highlight .mx {
+  color: #a6e22e; }
+
+.highlight .ss {
+  color: #a6e22e; }
