Proper og:description and page types Updated About page Proper CV in PDF format

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,13 +5,14 @@
     <div class="footer-col-wrapper">
       <div class="footer-col">
         © Roman “Megus” Petrov.<br />
-        <a class="u-email" href="mailto:megus.sugem@gmail.com">megus.sugem@gmail.com</a>
+        <a class="u-email" href="mailto:roman.petrov@icloud.com">roman.petrov@icloud.com</a>
       </div>
       <div class="footer-col">
         <a href="https://twitter.com/sugem"><svg viewbox="0 0 16 16" class="social-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#twitter' | relative_url }}"></use></svg></a>
         <a href="https://www.facebook.com/sugem"><svg viewbox="0 0 16 16" class="social-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#facebook' | relative_url }}"></use></svg></a>
         <a href="https://github.com/Megus"><svg viewbox="0 0 16 16" class="social-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#github' | relative_url }}"></use></svg></a>
         <a href="https://www.youtube.com/user/megussugem"><svg viewbox="0 0 16 16" class="social-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#youtube' | relative_url }}"></use></svg></a>    
+        <a href="https://medium.com/@megus"><svg viewbox="0 0 16 16" class="social-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#medium' | relative_url }}"></use></svg></a>
       </div>
     </div>
   </div>
