--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -53,7 +53,7 @@ layout: default
 
 <div class="social-buttons">
   <a class="twitter-share-button" data-size="large"
-    href="https://twitter.com/intent/tweet?text={{ page.title | uri_escape }}&via={{ site.twitter_username }}">
+    href="https://twitter.com/intent/tweet?text={{ page.title | uri_escape }}&via={{ site.twitter.username }}">
     Tweet
   </a>
   <div class="fb-share-button" style="top: -7px;"
