--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -231,6 +231,12 @@ pre {
   vertical-align: text-top;
 }
 
+@include media-query($on-palm) {
+  .social-icon {
+    padding-right: 8px;
+  }
+}
+
 /**
  * Tables
  */
