--- a/assets/main.css
+++ b/assets/main.css
@@ -171,6 +171,9 @@ pre {
   padding-right: 16px;
   vertical-align: text-top; }
 
+@media screen and (max-width: 600px) {
+  .social-icon {
+    padding-right: 8px; } }
 /**
  * Tables
  */
