--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -24,6 +24,7 @@ $table-text-align: left !default;
 
 // Width of the content area
 $content-width:    800px !default;
+$home-width:       1024px !default;
 
 $on-palm:          600px !default;
 $on-laptop:        800px !default;
