--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,5 @@
 <header class="site-header" role="banner">
-
-  <div class="wrapper">
+  <div class="site-header-wrapper">
     {%- assign default_paths = site.pages | map: "path" -%}
     {%- assign page_paths = site.header_pages | default: default_paths -%}
     <a href="{{ "/" | relative_url }}"><img class="site-logo" src="/assets/megus.png" />
