Added "Featured Project" block on the home page. Now it's Virtual Megus

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,6 +5,8 @@
     {%- include header.html -%}
     <main class="page-content" aria-label="Content">
       <div class="home">
+        {%- include featured.html -%}
+
         {%- for post in site.posts -%}
         {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
         {%- if forloop.first -%}
