--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -364,6 +364,46 @@
   }
 }
 
+.featured {
+  width: 100%;
+  background-color: #eee;
+  margin: $spacing-unit / 2;
+  padding: $spacing-unit / 2;
+  border-width: 1px;
+  border-radius: 8px;
+  border-color: #ddd;
+  border-style: solid;
+  box-shadow: 2px 2px 16px 2px rgba(0, 0, 0, 0.07);
+}
+
+.featured-image {
+  width: 25%;
+  padding-top: 15%;
+  background-position: center;
+  background-size: cover;
+  position: relative;
+  float: left;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+
+  @include media-query($on-palm) {
+    width: 100%;
+    padding-top: 65%;
+  }
+}
+
+.featured-body {
+  width: 45%;
+  margin-left: $spacing-unit;
+  float: left;
+
+  @include media-query($on-palm) {
+    width: 100%;
+    margin-left: 0px;
+    margin-top: $spacing-unit / 2;
+  }
+}
+
 .home-first-post {
   width: 100%;
   margin: $spacing-unit / 2;
@@ -404,6 +444,7 @@
   margin-bottom: $spacing-unit / 2;
   float: left;
   border: 1px solid #ddd;
+  border-radius: 4px;
 
   @include media-query($on-palm) {
     width: 100%;
@@ -418,6 +459,7 @@
   position: relative;
   margin-bottom: $spacing-unit / 2;
   border: 1px solid #ddd;
+  border-radius: 4px;
 }
 
 
