--- a/assets/main.css
+++ b/assets/main.css
@@ -492,6 +492,41 @@ hr::before {
   .home a {
     display: block; }
 
+.featured {
+  width: 100%;
+  background-color: #eee;
+  margin: 15px;
+  padding: 15px;
+  border-width: 1px;
+  border-radius: 8px;
+  border-color: #ddd;
+  border-style: solid;
+  box-shadow: 2px 2px 16px 2px rgba(0, 0, 0, 0.07); }
+
+.featured-image {
+  width: 25%;
+  padding-top: 15%;
+  background-position: center;
+  background-size: cover;
+  position: relative;
+  float: left;
+  border: 1px solid #ddd;
+  border-radius: 4px; }
+  @media screen and (max-width: 600px) {
+    .featured-image {
+      width: 100%;
+      padding-top: 65%; } }
+
+.featured-body {
+  width: 45%;
+  margin-left: 30px;
+  float: left; }
+  @media screen and (max-width: 600px) {
+    .featured-body {
+      width: 100%;
+      margin-left: 0px;
+      margin-top: 15px; } }
+
 .home-first-post {
   width: 100%;
   margin: 15px; }
@@ -524,7 +559,8 @@ hr::before {
   position: relative;
   margin-bottom: 15px;
   float: left;
-  border: 1px solid #ddd; }
+  border: 1px solid #ddd;
+  border-radius: 4px; }
   @media screen and (max-width: 600px) {
     .home-first-post-cover {
       width: 100%;
@@ -536,7 +572,8 @@ hr::before {
   background-size: cover;
   position: relative;
   margin-bottom: 15px;
-  border: 1px solid #ddd; }
+  border: 1px solid #ddd;
+  border-radius: 4px; }
 
 /**
  * Portfolio page
