Added PICONICCC to the Portfolio page Added tags (no links yet)

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -12,4 +12,8 @@ layout: default
     {{ content }}
   </div>
 
+  <div class="post-meta">
+    <p>Tags: {{ page.tags | sort | join: ", " }}</p>
+  </div>
+
 </article>
