--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <div class="site-header-wrapper">
     {%- assign default_paths = site.pages | map: "path" -%}
     {%- assign page_paths = site.header_pages | default: default_paths -%}
-    <a href="{{ "/" | relative_url }}"><img class="site-logo" src="/assets/megus.png" />
+    <a href="{{ "/" | relative_url }}"><img class="site-logo" src="/assets/megus-logo-circle.png" />
     <span class="site-title" rel="author">Megus</span></a>
 
     {%- if page_paths -%}
